--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,19 @@
-#numpy==1.21.1
-#pandas==1.3.1
-#requests==2.26.0
-#streamlit==1.0.0
-#waitress==2.1.0
-#fastapi==0.115.6
-#google-generativeai==0.8.3
-#transformers==4.47.0
-#torch==2.5.1
+# Core FastAPI and server
+fastapi[standard] # This will install fastapi and uvicorn automatically
 
-
+# Other dependencies
 numpy
 pandas
 requests
 streamlit
 joblib
-gunicorn
-fastapi
 google-generativeai
-fastapi[standard]
-transformers 
-torch 
+transformers
+torch
+
+# Optional: If you need specific versions, uncomment and specify.
+# For example:
+# numpy==1.26.4
+# pandas==2.2.2
+# requests==2.32.3
+# etc.
